<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@drawable/bg_top_round_white">

    <!-- Top Indicator -->
    <View
        android:layout_width="28dp"
        android:layout_height="2dp"
        android:layout_gravity="center"
        android:background="@drawable/ic_line"/>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="28dp"
        android:text="@string/do_you_want_to_save_nthis_track"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="22sp"
        android:fontFamily="@font/inter_bold"/>

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/save_the_track_to_access_it_at_any_time"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:fontFamily="@font/inter_regular"/>

    <!-- Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:weightSum="2">
        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@drawable/bg_outline_button"
            android:text="@string/no"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_marginHorizontal="5dp"
            android:fontFamily="@font/inter_semibold" />

        <TextView
            android:id="@+id/tvStop"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@drawable/bg_green_button"
            android:text="@string/yes"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_marginHorizontal="5dp"
            android:textSize="12sp"
            android:fontFamily="@font/inter_semibold" />
    </LinearLayout>

</LinearLayout>