<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F7F7">

    <!-- Logo -->
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginTop="70dp"
        android:src="@drawable/moa_trax"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Main Content -->
    <LinearLayout
        android:id="@+id/layoutContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/imgLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Title -->
        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/sign_in_to_your_naccount"
            android:textColor="#222222"
            android:textStyle="bold"
            android:textSize="24sp"
            android:fontFamily="@font/inter_bold"/>

        <!-- Subtitle -->
        <TextView
            android:id="@+id/txtSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/enter_your_email_and_password_to_log_in"
            android:textColor="#8E8E8E"
            android:fontFamily="@font/inter_regular"
            android:textSize="14sp"/>

        <LinearLayout
            android:id="@+id/llUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title">

            <TextView
                style="@style/TVRegular10"
                android:layout_marginBottom="8dp"
                android:textSize="15sp"
                android:textColor="@color/textview_gray"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/email" />


            <EditText
                android:id="@+id/etUsername"
                style="@style/ETBackgroundStroke"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:hint="@string/enter_email"
                android:textColorHint="@color/text_hint"
                android:textSize="18sp"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llUsername">

            <TextView
                style="@style/TVRegular10"
                android:layout_marginBottom="8sp"
                android:textSize="15sp"
                android:textColor="@color/textview_gray"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/password"/>

            <LinearLayout
                style="@style/ETBackgroundStroke"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etPass"
                    style="@style/ETBackgroundStroke"
                    android:layout_width="0dp"
                    android:layout_height="50sp"
                    android:maxLength="128"
                    android:textSize="18sp"
                    android:layout_weight="0.9"
                    android:hint="@string/enter_password"
                    android:textColorHint="@color/text_hint"
                    android:inputType="textPassword"
                    android:paddingHorizontal="14sp" />

                <LinearLayout
                    android:id="@+id/llHideUnhidePass"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.15"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/ivUnhideHide"
                        android:layout_width="24sp"
                        android:layout_height="24sp"
                        android:src="@drawable/ic_hide" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="24sp"
            android:layout_height="24sp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="22sp"
            android:src="@drawable/ic_uncheck"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llPassword" />

        <TextView
            android:id="@+id/tvRememberMe"
            style="@style/TVRegular10"
            android:layout_marginStart="8dp"
            android:layout_marginTop="25dp"
            android:text="@string/remember_me"
            android:textSize="15sp"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@id/llPassword" />


        <!-- Login Button -->
        <Button
            android:id="@+id/btnLogin"
            style="@style/ThemeBtnBoldLargeGreen"
            android:text="@string/log_in"
            android:clickable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvRememberMe"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>