<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/galleryBottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_top_round_20"
    android:orientation="vertical">

    <View
        android:id="@+id/viewLine"
        android:layout_width="28dp"
        android:layout_height="2dp"
        android:layout_gravity="center"
        android:layout_marginTop="15sp"
        android:background="@drawable/bg_solid_btn_grey_round_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvLogoutTag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        android:text="@string/logout"
        android:gravity="center"
        android:textColor="@color/text_black"
        android:fontFamily="@font/inter_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewLine"/>

    <TextView
        android:id="@+id/tvLogoutMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/inter_regular"
        android:gravity="center"
        android:text="@string/logout_msg"
        android:textColor="@color/textview_gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLogoutTag" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="36dp"
        android:layout_marginHorizontal="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLogoutMsg">

        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@drawable/bg_outline_button"
            android:text="@string/cancel"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_marginHorizontal="5dp"
            android:fontFamily="@font/inter_semibold" />
        <TextView
            android:id="@+id/btnLogout"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@drawable/bg_green_button"
            android:text="@string/logout"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_marginHorizontal="5dp"
            android:textSize="12sp"
            android:fontFamily="@font/inter_semibold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>